AP-6 ajustando o modelo as novas mudanças de modelagem

--- a/source/web/app/components/project-contact/messages/messages.component.html
+++ b/source/web/app/components/project-contact/messages/messages.component.html
@@ -61,7 +61,7 @@
     </div>
     <div class="issue-info">
       <span align="justify" class="mat-h4">{{contact.title}}</span>
-      <span align="justify" class="mat-card-subtitle"><em>{{contact.message}}</em></span>
+      <span align="justify" class="mat-card-subtitle"><em>{{contact.text}}</em></span>
     </div>
   </div>
 
