--- a/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
+++ b/source/web/app/components/project-contact/project-contact-item/project-contact-item.component.html
@@ -53,7 +53,7 @@
       <mat-chip *ngIf="!isEmptyMessages" (click)="goToMessages(contactItem)">{{projectContactValues.tooltip.viewMore}}</mat-chip>
     </mat-chip-list>
   </div>
-  <span class="mat-h4 main-message">{{contactItem.message}}
+  <span class="mat-h4 main-message">{{contactItem.text}}
 
   </span>
   <div>
