--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -107,7 +107,7 @@
       </otus-input-text>
 
       <otus-input-text-area title="{{projectContactValues.title.issueInputTextArea}}"
-                            controlName="message"
+                            controlName="text"
                             [formGroup]="projectContactForm"
                             rows=3
                             placeholder="{{projectContactValues.placeholder.issue.inputTextArea}}">
