--- a/source/web/app/components/project-contact/messages/messages.component.html
+++ b/source/web/app/components/project-contact/messages/messages.component.html
@@ -49,7 +49,7 @@
     <div class="info-contact">
       <mat-chip-list aria-label="status" class="chip">
         <mat-chip color="primary" selected *ngIf="contact.status === 'OPEN'">{{projectContactValues.status.open}}</mat-chip>
-        <mat-chip color="none" selected *ngIf="contact.status === 'CLOSE'">{{projectContactValues.status.close}}</mat-chip>
+        <mat-chip color="none" selected *ngIf="contact.status === 'CLOSED'">{{projectContactValues.status.closed}}</mat-chip>
         <mat-chip style="background-color: #006600" selected *ngIf="contact.status === 'FINALIZED'">{{projectContactValues.status.finalized}}</mat-chip>
 
       </mat-chip-list>
