--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -148,7 +148,7 @@
                 <mat-chip color="primary" selected
                           *ngIf="contact.status === 'OPEN'">{{projectContactValues.status.open}}</mat-chip>
                 <mat-chip color="none" selected
-                          *ngIf="contact.status === 'CLOSE'">{{projectContactValues.status.close}}</mat-chip>
+                          *ngIf="contact.status === 'CLOSED'">{{projectContactValues.status.closed}}</mat-chip>
                 <mat-chip style="background-color: #006600" selected
                           *ngIf="contact.status === 'FINALIZED'">{{projectContactValues.status.finalized}}</mat-chip>
               </mat-chip-list>
