AP-6 Tratamento para criação de mensagens, atualizando ultima mensagem e encaixando nome do sender associado ao id

--- a/source/web/app/components/project-contact/messages/messages.component.html
+++ b/source/web/app/components/project-contact/messages/messages.component.html
@@ -70,7 +70,7 @@
       <mat-card class="message-card" *ngFor="let message of messages">
         <mat-card-subtitle>
           <span>{{message.creationDate| date:'dd/MM/yyyy - HH:mm' }} | </span>
-          <span>{{message.sender}}</span>
+          <span>{{message.senderInfo?.name}}</span>
         </mat-card-subtitle>
         <mat-card-content>
           <span align="justify">{{message.text}}</span>
