AP-6 acerto responsivo no view de mensagens

--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -21,7 +21,7 @@
   </mat-toolbar>
   <app-alert></app-alert>
   <mat-sidenav-container fxFlex="100">
-    <mat-sidenav-content style="background-color: #ffffff">
+    <mat-sidenav-content style="background-color: #f3f3f3;">
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
