--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -1,11 +1,16 @@
 <div  fxLayout="column" fxFlexFill >
   <mat-toolbar color="primary" *ngIf="currentUser">
     <mat-toolbar-row fxLayoutAlign="start center" fxLayoutGap="10px">
-      <a routerLink="/dashboard/tasks" id="title">{{ title }}</a>
+      <button mat-button id="title" routerLink="/dashboard">
+        <mat-icon>home</mat-icon>{{ title }}</button>
       <span fxFlex></span>
       <div fxFlex="" fxLayoutAlign="end center" fxLayoutGap="10px">
         <a class="mat-body" routerLink="/project-contact">Contato</a>
-        <button mat-button [matMenuTriggerFor]="menu">
+ <button mat-button routerLink="/exam-results">
+          <mat-icon>description</mat-icon>Exames
+        </button>        
+
+<button mat-button [matMenuTriggerFor]="menu">
           <mat-icon aria-hidden="false" aria-label="user" matBadgeOverlap="false" matBadgeColor="warn"
                     matBadgePosition="before">account_circle</mat-icon>
           {{ currentUser.name }}
@@ -21,7 +26,7 @@
   </mat-toolbar>
   <app-alert></app-alert>
   <mat-sidenav-container fxFlex="100">
-    <mat-sidenav-content style="background-color: #f3f3f3;">
+    <mat-sidenav-content style="background-color: #ffffff">
       <router-outlet></router-outlet>
     </mat-sidenav-content>
   </mat-sidenav-container>
