--- a/source/web/app/components/exam-results/exam-results.component.html
+++ b/source/web/app/components/exam-results/exam-results.component.html
@@ -1,6 +1,6 @@
 <div class="exam-results-container" layout="column">
   <div class="exam-results-list"><!--*ngIf="!networkLoading && !isEmptyProjectContacts"-->
-    <mat-accordion *ngFor="let report of reports"><!--*ngFor="let contact of projectContacts"-->
+    <mat-accordion *ngFor="let report of reports$ | async as Report"><!--*ngFor="let contact of projectContacts"-->
       <mat-expansion-panel class="exam-item mat-elevation-z4"><!--(opened)-->
         <mat-expansion-panel-header>
           <mat-panel-title class="exam-panel-title">
