--- a/source/web/app/components/exam-results/exam-results.component.html
+++ b/source/web/app/components/exam-results/exam-results.component.html
@@ -1,6 +1,16 @@
 <div class="exam-results-container" layout="column">
+  <div fxLayoutAlign="center center" class="exam-title-page">
+    <h1>Resultados de exames</h1>
+  </div>
+  <form class="search-form">
+    <mat-form-field class="search-field">
+      <mat-label>procurar exames</mat-label>
+      <input matInput [value]="search">
+      <button mat-button matSuffix><mat-icon matSuffix>search</mat-icon></button>
+    </mat-form-field>
+  </form>
   <div class="exam-results-list"><!--*ngIf="!networkLoading && !isEmptyProjectContacts"-->
-    <mat-accordion *ngFor="let report of reports$ | async as Report"><!--*ngFor="let contact of projectContacts"-->
+    <mat-accordion *ngFor="let report of reports"><!--*ngFor="let contact of projectContacts"-->
       <mat-expansion-panel class="exam-item mat-elevation-z4"><!--(opened)-->
         <mat-expansion-panel-header>
           <mat-panel-title class="exam-panel-title">
@@ -18,8 +28,8 @@
           <mat-divider></mat-divider>
           <mat-list class="datasources-list"  *ngFor="let dataSources of report.dataSources">
             <mat-list-item class="datasources-item">
-              <i *ngIf="dataSources['result[0]']" class="material-icons md-14 red600">fiber_manual_record</i>
-              <i *ngIf="dataSources['result[0]']" class="material-icons md-14 green600">fiber_manual_record</i>
+              <i *ngIf="!dataSources.result[0]" class="material-icons md-14 red600">fiber_manual_record</i>
+              <i *ngIf="dataSources.result[0]" class="material-icons md-14 green600">fiber_manual_record</i>
               {{dataSources['label']}}
             </mat-list-item>
           </mat-list>
@@ -37,5 +47,4 @@
     </mat-accordion>
   </div>
 <!--  <mat-progress-bar *ngIf="loading" mode="indeterminate" value="40"></mat-progress-bar>-->
-  <button (click)="createPDF()"></button>
 </div>
