--- a/source/web/app/components/exam-results/exam-results.component.html
+++ b/source/web/app/components/exam-results/exam-results.component.html
@@ -1,9 +1,12 @@
-<div class="exam-results-container" layout="column">
+<div fxLayoutAlign="center center" *ngIf="!hasMore">
+  <h1>não há resultados de exames</h1>
+</div>
+<div class="exam-results-container" layout="column" infiniteScroll [infiniteScrollDistance]="1" [infiniteScrollThrottle]="50" (scrolled)="onScroll()" [scrollWindow]="false">
   <div fxLayoutAlign="center center" class="exam-title-page">
     <h1>Resultados de exames</h1>
   </div>
   <div class="exam-results-list"><!--*ngIf="!networkLoading && !isEmptyProjectContacts"-->
-    <mat-accordion  *ngFor="let report of reports"><!--*ngFor="let contact of projectContacts"-->
+    <mat-accordion *ngFor="let report of reports"><!--*ngFor="let contact of projectContacts"-->
       <mat-expansion-panel class="exam-item mat-elevation-z4"><!--(opened)-->
         <mat-expansion-panel-header>
           <mat-panel-title class="exam-panel-title">
@@ -28,8 +31,8 @@
           </mat-list>
           <div class="report-access">
             <mat-chip-list>
-              <p *ngIf="report.hasAllDatasources" class="{{report.status.color}}">Indisponivel</p>
-              <button (click)="goToReport(report)" mat-raised-button *ngIf="!report.hasAllDatasources" class="mat-elevation-z7">
+              <p *ngIf="!report.hasAllDatasources" class="{{report.status.color}}">Indisponivel</p>
+              <button (click)="onClickResult(report)" mat-raised-button *ngIf="report.hasAllDatasources" class="mat-elevation-z7">
                 <i class="material-icons">description</i>
                 Acessar Report
               </button>
@@ -39,6 +42,7 @@
       </mat-expansion-panel>
     </mat-accordion>
   </div>
-  <mat-progress-bar *ngIf="loading && hasMore" mode="indeterminate" value="40"></mat-progress-bar>
-  <button *ngIf="hasMore" mat-button fxLayoutAlign="center center" (click)="loadMore()">Carregar Mais+</button>
+  <mat-progress-bar *ngIf="loading" mode="indeterminate" value="40"></mat-progress-bar>
+  <!--<button *ngIf="hasMore" mat-button fxLayoutAlign="center center" (click)="onScroll()">Carregar Mais+</button>-->
+
 </div>
