--- a/source/web/app/components/project-contact/project-contact.component.html
+++ b/source/web/app/components/project-contact/project-contact.component.html
@@ -68,7 +68,7 @@
                           *ngIf="contact.status === 'OPEN'">{{projectContactValues.status.open}}</mat-chip>
                 <mat-chip color="none" selected
                           *ngIf="contact.status === 'CLOSED'">{{projectContactValues.status.closed}}</mat-chip>
-                <mat-chip style="background-color: #006600" selected
+                <mat-chip style="background-color: #00796a" selected
                           *ngIf="contact.status === 'FINALIZED'">{{projectContactValues.status.finalized}}</mat-chip>
               </mat-chip-list>
               <span class="mat-card-subtitle">{{contact.title}}</span>
