--- a/source/web/app/components/project-contact/messages/messages.component.html
+++ b/source/web/app/components/project-contact/messages/messages.component.html
@@ -30,7 +30,7 @@
     <mat-card class="message-card" *ngFor="let message of messages">
       <mat-card-subtitle>
         <span>{{message.creationDate| date:'dd/MM/yyyy - HH:mm' }} | </span>
-        <span>{{message.senderInfo?.name}}</span>
+        <span>{{message.senderInfo?.fullName}}</span>
       </mat-card-subtitle>
       <mat-card-content>
         <span align="justify">{{message.text}}</span>
