--- a/source/web/app/components/exam-results/exam-results.component.html
+++ b/source/web/app/components/exam-results/exam-results.component.html
@@ -5,9 +5,9 @@
   <div fxLayoutAlign="center center" class="exam-title-page">
     <h1>Resultados de exames</h1>
   </div>
-  <div class="exam-results-list"><!--*ngIf="!networkLoading && !isEmptyProjectContacts"-->
-    <mat-accordion *ngFor="let report of reports"><!--*ngFor="let contact of projectContacts"-->
-      <mat-expansion-panel class="exam-item mat-elevation-z4"><!--(opened)-->
+  <div class="exam-results-list">
+    <mat-accordion *ngFor="let report of reports">
+      <mat-expansion-panel class="exam-item mat-elevation-z4">
         <mat-expansion-panel-header>
           <mat-panel-title class="exam-panel-title">
             <mat-chip-list aria-label="status" class="chip">
@@ -43,6 +43,4 @@
     </mat-accordion>
   </div>
   <mat-progress-bar *ngIf="loading" mode="indeterminate" value="40"></mat-progress-bar>
-  <!--<button *ngIf="hasMore" mat-button fxLayoutAlign="center center" (click)="onScroll()">Carregar Mais+</button>-->
-
 </div>
