--- a/source/web/app/components/account/account.scss
+++ b/source/web/app/components/account/account.scss
@@ -1,3 +1,5 @@
+
+
 .account-page {
   display: flex;
   align-items: center;
@@ -37,7 +39,7 @@
   }
   &:before {
     content: '';
-    background: #3f51b5;
+    background: blue;
     position: absolute;
     top: 50%;
     left: 0;
