--- a/source/web/app/components/exam-results/exam-results.component.css
+++ b/source/web/app/components/exam-results/exam-results.component.css
@@ -1,27 +1,10 @@
-.exam-results-container {
-  height: 95%;
-  overflow-y: scroll;
-}
 
 .exam-title-page {
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 .exam-title-page h1{
   font-size: 2rem;
-}
-
-.exam-results-list{
-  margin: 80px 8px;
-}
-.exam-panel-title{
-  display: flex;
-  align-items: center;
-}
-
-.exam-subtitle {
-  font-size: 16px;
-  margin-left: 10px;
 }
 
 .exam-result-content-section {
@@ -29,28 +12,68 @@
   flex-direction: column;
 }
 
-exam-panel-status-info span{
+.exam-panel-status-info{
+  margin-left: 16px;
   display: flex;
-  align-items: center;
+  flex-direction: row;
+}
+.exam-panel-status-info span {
+  display: flex;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: center;
+}
+.exam-panel-status-info span p{
+  height: 5px;
+  margin-left: 5px;
 }
 
 .exam-item {
-  margin: 30px 0;
+  margin: 15px 0;
 }
 
-.datasources-item {
+.exam-item span {
+  margin-right: 10px;
+}
+
+.mat-list-item, .mat-list-base {
   font-size: 15px;
+  height: 26px;
+  color: rgba(0,0,0, 0.7);
+}
+
+.mat-list-item p {
+  height: 0;
+  margin-left: 5px;
+  align-items: baseline;
 }
 
 .report-access {
   margin-top: 15px;
   display: flex;
-  justify-content: flex-end;
 }
 
+.loadmore-button{
+  display: flex;
+  justify-content: center;
+}
+
+
 .material-icons.md-36 { font-size: 36px; }
+.material-icons.md-20 { font-size: 20px; }
 .material-icons.md-14 { font-size: 14px; }
-.material-icons.green600 { color: green; }
+.material-icons.green600 { color: #006400; }
 .material-icons.green { color: #006400; }
-.material-icons.orange { color: #CC6600; }
+.green { color: #006400; }
+.material-icons.orange { color: #CC6600;}
+.orange { color: #CC6600; }
 .material-icons.red600 {color: orangered}
+
+
+@media only screen and (min-width: 940px) {
+  .exam-item{
+    width: 940px;
+    margin: 15px auto;
+  }
+}
+
