--- a/source/web/app/components/account/login/login.component.html
+++ b/source/web/app/components/account/login/login.component.html
@@ -1,7 +1,11 @@
 <div class="account-page">
   <div class="content">
     <mat-card class="mat-elevation-z11">
-      <mat-card-title>{{ title }}</mat-card-title>
+      <mat-card-title>
+        <figure>
+          <img style="width: 200px" mat-card-image src="web/assets/visual-identity/images/banner_app.png">
+        </figure>
+        </mat-card-title>
       <mat-card-content fxLayout="column">
         <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <p>
