AP-12 ajuste no mecanismo para receber imagens padronizadas logo(128px) e favicon(32px)

--- a/source/web/app/components/account/login/login.component.html
+++ b/source/web/app/components/account/login/login.component.html
@@ -3,7 +3,7 @@
     <mat-card class="mat-elevation-z11">
       <mat-card-title>
         <figure>
-          <img style="width: 200px" mat-card-image src="web/assets/visual-identity/images/logo.png">
+          <img mat-card-image src="web/assets/visual-identity/img/logo.png">
         </figure>
         </mat-card-title>
       <mat-card-content fxLayout="column">
