--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -1,10 +1,10 @@
 <div fxLayout="column" fxFlexFill>
   <mat-toolbar color="primary" *ngIf="currentUser">
     <mat-toolbar-row fxLayoutAlign="start center" fxLayoutGap="10px">
-      <button mat-button id="title" routerLink="/dashboard">
-        <mat-icon>home</mat-icon>
-        {{ title }}</button>
-      <span fxFlex></span>
+      <button mat-icon-button id="title" routerLink="/dashboard">
+        <img src="../web/assets/visual-identity/img/favicon.png">
+        </button>
+      <span fxFlex>{{ title }}</span>
       <div fxFlex="" fxLayoutAlign="end center" fxLayoutGap="10px">
         <button mat-button routerLink="/project-contact">
           <mat-icon>comments</mat-icon>
