AP-12 reposicionamento do manifest para pasta de identidade visual (PWA)

--- a/source/web/assets/visual-identity/_variables.scss
+++ b/source/web/assets/visual-identity/_variables.scss
@@ -1,4 +1,4 @@
-$otus-app-primary: mat-palette($mat-teal);
+$otus-app-primary: mat-palette($mat-indigo);
 $otus-app-accent: mat-palette($mat-gray, A200, A100, A400);
 $otus-app-warn: mat-palette($mat-red);
 
