--- a/source/web/assets/visual-identity/variables.scss
+++ b/source/web/assets/visual-identity/variables.scss
@@ -1,9 +1,8 @@
-$otus-app-primary: mat-palette($mat-indigo);
+$otus-app-primary: mat-palette($mat-light-blue, 800);
 $otus-app-accent: mat-palette($mat-pink, A200, A100, A400);
 $otus-app-warn: mat-palette($mat-red);
 
 $otus-app-theme: mat-light-theme($otus-app-primary, $otus-app-accent, $otus-app-warn);
-
 @include angular-material-theme($otus-app-theme);
 
 
