--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -1,37 +1,52 @@
 <div fxLayout="column" fxFlexFill>
   <mat-toolbar color="primary" *ngIf="currentUser">
-    <mat-toolbar-row fxLayoutAlign="start center" fxLayoutGap="10px">
-      <button mat-icon-button id="title" routerLink="/dashboard">
-        <img src="{{iconToolbar}}">
+    <mat-toolbar-row>
+      <div fxFlex="33" fxLayoutAlign="start center" fxPadding fxLayoutGap="10px">
+        <button mat-icon-button id="title" routerLink="/dashboard">
+          <img src="{{iconToolbar}}">
         </button>
-      <span fxFlex>{{ title }}</span>
-      <div fxFlex="" fxLayoutAlign="end center" fxLayoutGap="10px">
-        <button mat-button [matMenuTriggerFor]="menu">
-          <mat-icon aria-hidden="false" aria-label="user" matBadgeOverlap="false" matBadgeColor="warn"
-                    matBadgePosition="before">account_circle
-          </mat-icon>
-          {{ currentUser.name }}
-        </button>
-        <mat-menu #menu="matMenu" fxLayout="column">
-          <button mat-menu-item class="mat-button mat-flat-button" fxFlex (click)="logout()">
-            <mat-icon aria-hidden="false" aria-label="menu">exit_to_app</mat-icon>
-            Sair
-          </button>
-        </mat-menu>
+        <span fxShow="false" fxShow.gt-sm>{{ title }}</span>
+      </div>
 
-        <button mat-icon-button [matMenuTriggerFor]="Menu"><mat-icon>menu</mat-icon></button>
-        <mat-menu #Menu="matMenu" xPosition="before" fxLayout="row">
-          <button mat-menu-item routerLink="/project-contact">
-            <mat-icon>comments</mat-icon>
-            Contato
-          </button>
-          <button mat-menu-item routerLink="/exam-results">
-            <mat-icon>description</mat-icon>
-            Exames
-          </button>
-        </mat-menu>
+      <div fxFlex="33" fxLayoutAlign="center center" fxLayoutGap="10px">
+        <mat-icon aria-hidden="false" aria-label="user" fxShow="false" fxShow.gt-sm>account_circle
+        </mat-icon>
+        <div fxFlex>{{ currentUser.name }} </div>
 
       </div>
+
+      <div fxFlex="33" fxLayoutAlign="end center" fxLayoutGap="10px">
+        <div fxLayout="row" fxShow="false" fxShow.gt-sm>
+          <button mat-button routerLink="/project-contact">
+            <mat-icon fxLayoutGap="10px">comments</mat-icon><span style="margin-left:5px">Contato</span>
+          </button>
+          <button mat-button routerLink="/exam-results">
+            <mat-icon>description</mat-icon><span style="margin-left:5px">Exames</span>
+          </button>
+          <button mat-button (click)="logout()">
+            <mat-icon>exit_to_app</mat-icon><span style="margin-left:5px">Sair</span>
+          </button>
+        </div>
+        <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-sm>
+          <mat-icon>menu</mat-icon>
+        </button>
+      </div>
+
+      <mat-menu x-position="before" #menu="matMenu" fxLayoutAlign="center center">
+        <button mat-menu-item routerLink="/project-contact">
+          <mat-icon>comments</mat-icon>
+          Contato
+        </button>
+        <button mat-menu-item routerLink="/exam-results">
+          <mat-icon>description</mat-icon>
+          Exames
+        </button>
+        <button mat-menu-item (click)="logout()">
+          <mat-icon aria-label="menu">exit_to_app</mat-icon>
+          Sair
+        </button>
+      </mat-menu>
+
     </mat-toolbar-row>
   </mat-toolbar>
   <app-alert></app-alert>
