visualização e ocultação respondendo conforme o tamanho de tela

--- a/source/web/app/app.component.css
+++ b/source/web/app/app.component.css
@@ -2,3 +2,9 @@ a{
   text-decoration: none;
   color: #ffffff;
 }
+
+.flex-child {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
