hotfix-AP-18 grid layout no card de evento

--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -51,7 +51,7 @@
   </nav>
 
   <app-alert></app-alert>
-  <mat-sidenav-container fxFlex="100">
+  <mat-sidenav-container>
     <mat-sidenav-content style="background-color: #ffffff">
       <router-outlet></router-outlet>
     </mat-sidenav-content>
