--- a/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
+++ b/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
@@ -1,34 +1,70 @@
-﻿<mat-card>
-  <mat-card-header fxLayoutAlign="center center">
-    <div mat-card-avatar>
-      <mat-icon>description</mat-icon>
-    </div>
-    <div fxFlex>
-      <mat-card-title>{{data.acronym}}-{{data.name}}</mat-card-title>
-      <mat-card-subtitle>Criado em: {{data.date | date : "dd/MM/yyy HH:mm"}}</mat-card-subtitle>
-    </div>
-    <button *ngIf="data.status === 'PENDING'" mat-fab class="mat-mini-fab" matTooltip="Preencher atividade"
-            aria-label="Preencher atividade" on-click="callPreview()" [disabled]="data.status === 'ACCOMPLISHED'">
-      <mat-icon>play_arrow</mat-icon>
-    </button>
+﻿<style>
+  .card-layout {
+    display: grid;
+    grid-template-columns: 1.5fr 11fr .5fr;
+    grid-template-rows: 1fr .5fr;
+    box-sizing: border-box;
+    font-size: .5em !important;
 
-    <button *ngIf="data.status === 'REOPENED'" mat-fab class="mat-mini-fab" matTooltip="Repreencher atividade"
-            aria-label="Repreencher atividade" on-click="callPreview()" [disabled]="data.status === 'ACCOMPLISHED'">
-      <mat-icon>play_arrow</mat-icon>
-    </button>
 
-    <button *ngIf= "data.status === 'ACCOMPLISHED'" mat-fab class="mat-mini-fab" matTooltip="atividade preenchida"
-            aria-label="atividade prenchida" readonly="true" disabled>
-      <mat-icon>checked</mat-icon>
-    </button>
+    grid-template-areas:
+    "avatar title play"
+    ". description status"
+  }
 
-  </mat-card-header>
-  <mat-card-content>
-    <p fxFlex="80" fxLayoutAlign="start center">
-      {{data.description}}
-    </p>
-    <p fxFlex="20" fxLayoutAlign="end center" [ngStyle]="translatedStatus[data.status].style">
-      {{translatedStatus[data.status].translation}}
-    </p>
-  </mat-card-content>
+  .avatar {
+    grid-area: avatar;
+  }
+
+  .event-title {
+    grid-area: title;
+  }
+
+
+
+  .event-play {
+    grid-area: play
+  }
+
+  .event-description {
+    grid-area: description;
+  }
+
+  .event-status {
+    grid-area: status
+  }
+
+</style>
+
+
+<mat-card class="card-layout">
+  <mat-icon class="avatar">description</mat-icon>
+  <div class="event-title">
+    <p class="mat-h3">{{data.acronym}}-{{data.name}}</p>
+    <p class="mat-small">Criado em: {{data.date | date : "dd/MM/yyy HH:mm"}}</p>
+  </div>
+
+
+  <button class="event-play" *ngIf="data.status === 'PENDING'" mat-fab class="mat-mini-fab"
+          matTooltip="Preencher atividade"
+          aria-label="Preencher atividade" on-click="callPreview()" [disabled]="data.status === 'ACCOMPLISHED'">
+    <mat-icon>play_arrow</mat-icon>
+  </button>
+
+  <button class="event-play" *ngIf="data.status === 'REOPENED'" mat-fab class="mat-mini-fab"
+          matTooltip="Repreencher atividade"
+          aria-label="Repreencher atividade" on-click="callPreview()" [disabled]="data.status === 'ACCOMPLISHED'">
+    <mat-icon>play_arrow</mat-icon>
+  </button>
+
+  <button class="event-play " *ngIf="data.status === 'ACCOMPLISHED'" mat-fab class="mat-mini-fab"
+          matTooltip="atividade preenchida"
+          aria-label="atividade prenchida" readonly="true" disabled>
+    <mat-icon>checked</mat-icon>
+  </button>
+
+
+    <p class="event-description  mat-body-strong">{{data.description}}</p>
+    <p class="event-status mat-body-strong" [ngStyle]="translatedStatus[data.status].style">{{translatedStatus[data.status].translation}}</p>
+
 </mat-card>
