--- a/source/web/app/components/dashboard/tasks/tasks.component.html
+++ b/source/web/app/components/dashboard/tasks/tasks.component.html
@@ -1,6 +1,6 @@
-﻿<div fxLayout="row" fxLayoutAlign="center center" fxFlex>
+﻿<div fxLayout="row" fxLayoutAlign="center center">
   <otus-spinner *ngIf="isLoading"></otus-spinner>
-  <div *ngIf="!isLoading && !eventListNotFound" fxLayout="column" fxLayoutGap="5px" fxLayoutGap.gt-xs="5px" fxFlex fxFlex.gt-xs="80">
+  <div *ngIf="!isLoading && !eventListNotFound" fxLayout="column" fxLayoutGap="5px">
     <events-component *ngFor="let item of participantEvents" [event]="this.eventList[item.objectType]" [data]="item">
     </events-component>
   </div>
