--- a/source/web/styles.scss
+++ b/source/web/styles.scss
@@ -128,3 +128,14 @@ body {
     transform: rotate(450deg);
   }
 }
+
+@media screen and (max-width: 600px) {
+  .responsive-font {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 601px) {
+  .responsive-font {
+    font-size: 20px;
+  }
+}
