--- a/source/web/app/app.component.css
+++ b/source/web/app/app.component.css
@@ -1,12 +1,29 @@
-a{
-  text-decoration: none;
-  color: #ffffff;
+.toolbar-layout {
+  padding: 0px;
+  display: grid;
+  grid-template-columns: 1.5fr 7fr .5fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: "icon userName menu"
 }
 
-.flex-child {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
+@media screen and (max-width: 600px) {
+  .icon {
+    grid-area: icon;
+    padding: 8px;
+  }
+}
+@media screen and (min-width: 601px) {
+  .icon {
+    grid-area: icon;
+    padding: 16px;
+  }
 }
 
+.user-name {
+  grid-area: userName;
+}
+
+.menu {
+  grid-area: menu;
+}
 
