--- a/source/web/app/app.component.html
+++ b/source/web/app/app.component.html
@@ -1,37 +1,36 @@
-<div fxLayout="column" fxFlexFill>
-  <nav class="navbar navbar-default navbar-fixed-top">
-    <mat-toolbar color="primary" class="fixed-top" *ngIf="currentUser">
-      <mat-toolbar-row>
-        <div fxFlex="15" fxLayoutAlign="start center" fxPadding fxLayoutGap="10px">
-          <button mat-icon-button id="title" routerLink="/dashboard">
-            <img src="{{iconToolbar}}">
+<div fxLayout="column">
+
+  <mat-toolbar class="fixed-top" color="primary" *ngIf="currentUser">
+    <mat-toolbar-row class="toolbar-layout">
+      <div class="icon">
+        <button mat-icon-button id="title" routerLink="/dashboard">
+          <img src="{{iconToolbar}}">
+        </button>
+        <span fxHide.lt-md fxHide.md>{{ title }}</span>
+      </div>
+
+      <div class="user-name" fxLayout="row" fxLayoutAlign="center center">
+        <mat-icon fxHide.lt-md aria-label="user" style="padding-right: 30px">account_circle</mat-icon>
+        <div class="responsive-font">{{ currentUser.name }} </div>
+      </div>
+
+      <div class="menu">
+        <div fxHide.lt-md fxHide.md>
+          <button mat-button routerLink="/project-contact">
+            <mat-icon fxLayoutGap="10px">comments</mat-icon><span style="margin-left:5px">Contato</span>
           </button>
-          <span fxShow="false" fxShow.gt-sm>{{ title }}</span>
-        </div>
-
-        <div fxFlex="70" fxLayoutAlign="center center" fxLayoutGap="10px">
-          <mat-icon aria-hidden="false" aria-label="user" fxShow="false" fxShow.gt-sm>account_circle</mat-icon>
-          <div class="flex-child">{{ currentUser.name }} </div>
-        </div>
-
-        <div fxFlex="15" fxLayoutAlign="end center" fxLayoutGap="10px">
-          <div fxHide="true" fxShow.gt-md>
-            <button mat-button routerLink="/project-contact">
-              <mat-icon fxLayoutGap="10px">comments</mat-icon><span style="margin-left:5px">Contato</span>
-            </button>
-            <button mat-button routerLink="/exam-results">
-              <mat-icon>description</mat-icon><span style="margin-left:5px">Exames</span>
-            </button>
-            <button mat-button (click)="logout()">
-              <mat-icon>exit_to_app</mat-icon><span style="margin-left:5px">Sair</span>
-            </button>
-          </div>
-          <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-md>
-            <mat-icon>menu</mat-icon>
+          <button mat-button routerLink="/exam-results">
+            <mat-icon>description</mat-icon><span style="margin-left:5px">Exames</span>
+          </button>
+          <button mat-button (click)="logout()">
+            <mat-icon>exit_to_app</mat-icon><span style="margin-left:5px">Sair</span>
           </button>
         </div>
+        <button mat-button [mat-menu-trigger-for]="menu" fxHide="false" fxHide.gt-md>
+          <mat-icon>menu</mat-icon>
+        </button>
 
-        <mat-menu x-position="before" #menu="matMenu" fxLayoutAlign="center center">
+        <mat-menu fxHide.gt-md x-position="before" #menu="matMenu" fxLayoutAlign="center center">
           <button mat-menu-item routerLink="/project-contact">
             <mat-icon>comments</mat-icon>
             Contato
@@ -45,10 +44,10 @@
             Sair
           </button>
         </mat-menu>
+      </div>
 
-      </mat-toolbar-row>
-    </mat-toolbar>
-  </nav>
+    </mat-toolbar-row>
+  </mat-toolbar>
 
   <app-alert></app-alert>
   <mat-sidenav-container>
