hotfix-AP-18 ajuste espaçamento

--- a/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
+++ b/source/web/app/components/dashboard/tasks/events/activity/activity-autofill-event.component.html
@@ -44,7 +44,7 @@
 <mat-card class="card-layout">
   <mat-icon class="avatar">description</mat-icon>
   <div class="event-title">
-    <p class="mat-h3">{{data.acronym}}-{{data.name}}</p>
+    <p class="mat-h3 mb-0">{{data.acronym}}-{{data.name}}</p>
     <p class="mat-small event-subtitle">Criado em: {{data.date | date : "dd/MM/yyy HH:mm"}}</p>
   </div>
 
